manifests/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: "akslabacr1204.azurecr.io/backend:v1"  # 镜像路径
        ports:
        - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000        # ClusterIP 的暴露端口
      targetPort: 5000   # Pod 的容器端口
